force-app/main/default/objects/ppmail__Unlimail_Log__c/ppmail__Unlimail_Log__c.object-meta.xml
<CustomObject>
    <description>Used to store log messages generated by the Unlimail application. It can be used for debugging and monitoring the application&apos;s behavior.</description>
    <label>Unlimail Log</label>
    <nameField>
        <displayFormat>ULOG-{000000000}</displayFormat>
        <label>Unlimail Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unlimail Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>