force-app/main/default/objects/ppmail__Unlimail_Log__c/fields/ppmail__Details__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Details__c</fullName>
    <description>A long text field to store detailed information about the log entry, such as a stack trace or other debugging information.</description>
    <label>Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>