force-app/main/default/objects/ppmail__Unlimail_Log__c/fields/ppmail__Group_Key__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Group_Key__c</fullName>
    <description>A key used to group related log entries together. This can be useful for tracing a sequence of events or for filtering logs related to a specific transaction.</description>
    <label>Group Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>