force-app/main/default/objects/ppmail__Unlimail_Log__c/fields/ppmail__Payload__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Payload__c</fullName>
    <description>A JSON-formatted string that contains data related to the log entry.</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>