force-app/main/default/objects/ppmail__Unlimail_Log__c/listViews/ppmail__All_Logs.listView-meta.xml
<ListView>
    <fullName>ppmail__All_Logs</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>ppmail__Details__c</columns>
    <columns>ppmail__Group_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Logs</label>
</ListView>